--- a/style.css
+++ b/style.css
@@ -28,33 +28,41 @@
   }
 
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
+
 .task-row {
   display: flex;
 }
+
 #incomplete-tasks{
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
+
 #completed-tasks{
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
+
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
+
 input,button{
-  outline:none;
+  outline: none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -64,9 +72,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
@@ -78,6 +88,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -90,6 +101,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
@@ -99,9 +111,11 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#new-task {
   width: 318px;
 }
+
 p > button:hover {
   color: #0fc57c;
 }
@@ -115,6 +129,7 @@ li {
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -122,23 +137,28 @@ li > * {
 input[type="checkbox"] {
   margin: 0 10px;
 }
+
 .task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li > input[type="text"] {
   width: 226px
 }
+
 li > button.delete:hover {
   color: #cf2323;
 }
+
 .delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete img:hover {
   transform: rotateZ(0);
 }
@@ -151,14 +171,14 @@ li > button.delete:hover {
 
 /* Edit Task */
 ul li input[type=text] {
-  display:none
+  display: none
 }
 
 .edit-mode input[type=text] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px
 }
 
 .edit-mode label {
-  display:none;
+  display: none;
 }
