--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ input[type="checkbox"] {
 }
 
 li > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 li > button.delete:hover {
@@ -171,12 +171,12 @@ li > button.delete:hover {
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 .edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode label {
