--- a/style.css
+++ b/style.css
@@ -45,21 +45,23 @@
   display: flex;
 }
 
-#incomplete-tasks{
+#incomplete-tasks {
   margin: 0;
   padding: 0px;
 }
 
-#completed-tasks{
+#completed-tasks {
   margin: 0;
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button {
   outline: none;
 }
 
@@ -74,7 +76,7 @@ button {
 }
 
 button:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 
 /* Heading */
